--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# 忽略 Kotlin 版本兼容性檢查（不推薦，可能導致編譯問題）
+android.suppressKotlinVersionCompatibilityCheck=true
